Fixed order list layout issue

--- a/src/pages/Orders/OrderList.module.scss
+++ b/src/pages/Orders/OrderList.module.scss
@@ -5,6 +5,7 @@
     top: 70px;
     bottom: 20px;
     padding: 10px;
+    overflow: hidden;
 
     .btnContainer {
         display: flex;
@@ -56,14 +57,17 @@
     }
 
     .body {
+        position: relative;
         width: 100%;
-        max-height: 95%;
         display: flex;
+        bottom: 0;
+        max-height: calc(100vh - 250px);
         flex-direction: column;
         overflow: auto;
         align-items: center;
         border-left: 1px solid #ddd;
         border-right: 1px solid #ddd;
+        margin-bottom: 100px;
 
         &>div {
             display: flex;
